--- a/backend/package.json
+++ b/backend/package.json
@@ -29,10 +29,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
     "redis": "^4.6.0"
   },
   "devDependencies": {
