--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.47",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "axios": "^1.3.4",
@@ -51,6 +51,14 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "typescript": "^4.9.5"
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "svgo": "^2.8.0",
+    "webpack-dev-server": "^5.2.1",
+    "resolve-url-loader": {
+      "postcss": "^8.4.47"
+    }
   },
   "proxy": "http://localhost:3000"
 }
